<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.8">
  <DUT Name="MachineState_enum" Id="{18b48550-1ade-0961-2747-2f4a90c789e8}">
    <Declaration><![CDATA[{attribute 'strict'}
{attribute 'to_string'}
TYPE MachineState_enum :
(
	MS_OFF		 		:= 0,
	MS_RESTARTING		:= 1,
	MS_ENABLED			:= 2,
	MS_ONESHOT_RECOVER	:= 3,
	MS_RECOVERING		:= 4,
	MS_RUNNING			:= 5,
	MS_CYCLESTOP		:= 6,
	MS_STOPPED			:= 7,
	MS_ERROR			:= 8
);
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>