<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4026.11">
  <GVL Name="Param" Id="{673621fc-c806-000b-08ea-fd34161e1bd8}" ParameterList="True">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	// The following should be set to a value **equal to or greater than** the number of movers needed
	MAX_MOVERS   			: USINT := 100;   // Movers
	
	// The following should be set to a value **equal to or greater than** the number of objectives needed
	NUM_MOVERLISTS			: USINT := 10;	// Mover Lists
	NUM_POSITIONTRIGGERS	: USINT := 10;	// Position Triggers
	NUM_STATIONS			: USINT := 10;	// Stations
	NUM_ZONES				: USINT := 10;	// Zones
	
	NUM_TRACKS				: USINT	:= 1;	// Tracks (Typically 1)
	DEFAULT_TRACK			: USINT := 1;	// Default track for movers, stations, zones and position triggers

	PART_ARRAY_SIZE			: UDINT := 100;
	AUTO_POPULATE_STATIONS  : BOOL := TRUE; // use the Station[x] array to label stations on the visualization. Turn off if manually entering stations in the configurator.
	
	// statistics weighted average
	ALPHA_EMA				: LREAL := 0.1;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>